# morgen-mcp

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/morgen_diary/: server.py
